# Varogo

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: .env.example  .env.test.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  jest.integration.config.js  jest.unit.config.js  package.json  poc_e2e_v3.py  poc_evaluator_comparison.py  pyproject.toml  requirements.txt  tsconfig.json
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0ba5abb056df_add_unique_constraint_to_draft_.py  2cb97efd1a30_add_draft_generation_logs.py  7309849873a8_add_topic_tag_to_post_drafts.py  9b1392052eab_rename_accounts_to_oauth_accounts.py  b930df179645_reconcile_prisma_era_schema_drift.py
apps/backend/app/: database.py  dependencies.py  main.py
apps/backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/backend/app/core/: config.py  discord.py  email.py  exceptions.py  security.py
apps/backend/app/llm/: gemini.py  openai.py
apps/backend/app/post_draft/: models.py  option_generation_service.py  router.py  schemas.py  service.py  voice_evaluator_service.py
apps/backend/app/products/: analysis_service.py  models.py  router.py  schemas.py  service.py
apps/backend/app/threads/: mock_explore.py  models.py  router.py  schemas.py  service.py  threads_crypto.py
apps/backend/prisma/: schema.prisma
apps/backend/scripts/: check_generation_logs.py
apps/backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/tests/: conftest.py
(+415 files in other folders)
