[tool.poetry]
name = "varogo-backend"
version = "0.1.0"
description = "Varogo FastAPI backend"
authors = ["kingjeongkong <wjdqls9223@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
asyncpg = ">=0.30.0"
alembic = ">=1.14.0"
pydantic = {extras = ["email"], version = ">=2.10.0"}
pydantic-settings = ">=2.7.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
bcrypt = ">=4.0.0"
cryptography = ">=43.0.0"
httpx = ">=0.28.0"
openai = ">=1.58.0"
google-genai = ">=1.0.0"
stripe = ">=11.0.0"
langsmith = "^0.8.5"
langchain-openai = "^1.2.2"
langchain-google-genai = "^4.2.3"
langgraph = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
